<resources>
    <string name="app_name">橙汁</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="tv_amend_title">登录</string>
    <string name="et_sno">学号</string>
    <string name="et_edu_password">教务网密码</string>
    <string name="btn_go">登录</string>
    <string name="btn_user_item">用户条款</string>

    <string name="center">center</string>
    <string name="textView1">序号</string>
    <string name="textView2">学号</string>
    <string name="textView3">姓名</string>
    <string name="todo">TODO</string>

    <string name="app_name_for_about">橙汁</string>
    <string name="developer">开发者</string>
    <string name="github">GitHub</string>
    <string name="github_Address">github.com/aaronlinv/JuiceTimetable</string>
    <string name="cook_apk_address">coolapk.com/apk/com.juice.timetable</string>
    <string name="team_blog">反馈邮箱：aaronlinv@outlook.com</string>
    <string name="openSource">感谢以下开源项目</string>
    <string name="github_lib"> github.com/xxyangyoulin/ClassSchedule
        \ngithub.com/YZune/WakeUpSchedule
        \norg.jsoup:jsoup
        \norg.mockito:mockito-core
        \ncom.squareup.okhttp3:okhttp
        \ncom.github.GrenderG:Toasty
        \njunit:junit
        \ncom.github.florent37:viewtooltip
        \ncom.jaredrummler:material-spinner
        \ncom.github.f0ris.sweetalert:library
    </string>
    <string name="thanks">感谢以下好朋友的贡献</string>
    <string name="thanks_list">小懒的小懒
        \n索拉里斯星.
        \nEspoir
        \nSucgz
        \n杨洋
        \nduoduo
    </string>
    <string name="feedback">反馈</string>

    <string name="shortcuts_edit">改信息</string>
    <string name="shortcuts_feedback">去反馈</string>
    <string name="shortcuts_grade">查成绩</string>
    <string name="user_item"><br />
本应用深知个人信息对您的重要性，并会尽全力保护您的个人信息安全可靠。我们致力于维持您对我们的信任，恪守以下原则，保护您的个人信息：权责一致原则、目的明确原则、选择同意原则、最少够用原则、确保安全原则、主体参与原则、公开透明原则等。同时，我们承诺，我们将按业界成熟的安全标准，采取相应的安全保护措施来保护您的个人信息。 请在使用我们的产品（或服务）前，仔细阅读并了解本《隐私权条款》。"
 一、我们如何收集和使用您的个人信息
   个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。 我们仅会出于本条款所述的以下目的，收集和使用您的个人信息：
  （一） 实际上我们不会收集您的任何个人信息，您的个人信息存在于本地数据库中。
  （二） 我们会对您的密码进行加密，防止数据泄露。
二、我们如何使用 Cookie 和同类技术
  （一）Cookie
   为确保软件正常运转，我们会在您的移动设备上存储Cookie数据文件。Cookie 通常包含标识符、站点名称以及一些号码和字符。借助于 Cookie，软件能够存储您的个人账户信息等数据。
   我们不会将 Cookie 用于本条款所述目的之外的任何用途。您可根据自己的偏好管理或删除 Cookie。您可以清除设备上保存的所有 Cookie。
三、我们如何共享、转让您的个人信息
  （一）共享
     我们不会向其他任何公司、组织和个人分享您的个人信息。
  （二）转让
   我们不会将您的个人信息转让给任何公司、组织和个人。
四、我们如何保护您的个人信息
  （一）我们已使用符合业界标准的安全防护措施保护您提供的个人信息，防止数据遭到未经授权访问、公开披露、使用、修改、损坏或丢失。我们会采取一切合理可行的措施，保护您的个人信息。例如，我们会使用加密技术确保数据的保密性；我们会使用受信赖的保护机制防止数据遭到恶意攻击；我们会部署访问控制机制，确保只有用户自己才可访问个人信息。
  （二）我们会采取一切合理可行的措施，确保不收集无关的个人信息。我们只会在达成本条款所述目的所需的期限内保留您的个人信息，除非需要延长保留期或受到法律的允许。
  （三）互联网并非绝对安全的环境，而且电子邮件、即时通讯、及与其他我们用户的交流方式并未加密，我们强烈建议您不要通过此类方式发送个人信息。请使用复杂密码，增加账号的安全性。
五、本隐私权条款如何更新
  我们可能适时会对本隐私权条款进行调整或变更，本隐私权条款的任何更新将以标注更新时间的方式公布在我们软件上，除法律法规或监管规定另有强制性规定外，经调整或变更的内容一经通知或公布后的7日后生效。如您在隐私权条款调整或变更后继续使用我们提供的任一服务或访问我们相关软件的，我们相信这代表您已充分阅读、理解并接受修改后的隐私权条款并受其约束。
    </string>
    <string name="tv_edu_passwd">教务网密码</string>
    <string name="tv_sno">学号</string>
    <string name="bt_item">用户条款</string>
    <string name="bt_Update">更新认证信息</string>

    <string name="go_origin_course">跳转到原始课表</string>
    <string name="go_current_week">跳转到当前周</string>
    <string name="more_option">更多选项</string>
    <string name="tip_show_mooc">显示慕课</string>
    <string name="loading">正在登录…</string>
    <string name="week">周一</string>
    <string name="empty">暂无数据</string>
    <string name="tip_current_mooc">本学期慕课课程</string>
    <string name="tip_example_mooc">走进航空航天</string>
    <string name="cool_apk">酷安</string>

    <string name="syngrade">综合成绩</string>
    <string name="unigrade">统考成绩</string>
    <string name="need_evaluation">成绩测评后才能查询成绩</string>
    <string name="refresh_success">数据刷新成功</string>

    <string name="menu_about">关于</string>
    <string name="menu_course_webView">源课表</string>
    <string name="menu_grade">考试成绩</string>
    <string name="menu_exam">考场安排</string>
    <string name="menu_expect">后续功能尽情期待…</string>
    <string name="menu_tools">工具箱</string>
    <string name="menu_course">首页</string>
    <string name="menu_login">修改认证信息</string>
    <string name="menu_settings">设置</string>
    <string name="menu_credit">学分</string>

    <string name="exam_year">学年</string>
    <string name="exam_type">学期</string>
    <string name="credits">学分</string>

    <string name="check_for_updates">检查更新</string>
    <string name="new_version_dialog_title_course">有新版可用</string>
    <string name="new_version_dialog_title">发现新版本</string>
    <string name="new_version_dialog_message">建议前往 GitHub 下载安装\n最新版本：</string>
    <string name="ok_quit_dialog_title">好</string>
    <string name="no_quit_dialog_title">取消</string>
    <string name="ignore_quit_dialog_title">下次一定</string>
    <string name="github_url">https://github.com/aaronlinv/JuiceTimetable</string>
    <string name="email">mailto:aaronlinv@outlook.com</string>

    <string name="dark_theme">跟随系统深色模式</string>
    <string name="dark_theme_summary_off">开启后，将随系统打开或关闭深色模式</string>
    <string name="dark_theme_summary_on">仅支持Android 10.0及以上</string>

    <string name="preferenceCategory_preference">个性化</string>
    <string name="preferenceCategory_other">其他</string>
    <string name="sync_title">自动检查更新</string>
    <string name="attachment_title">自动下载</string>
    <string name="attachment_summary_on">每7天检查一次</string>
    <string name="attachment_summary_off">关闭</string>
    <string name="preferenceCategory_notify">通知</string>
    <string name="notify_title">提醒明天上的课</string>
    <string name="notify_time_title">选择一个时间</string>

    <string name="notify_tomorrow_null_course">明天是周末，太好了明天没课！</string>


</resources>
