<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/course"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_unsigned"
            android:icon="@drawable/sign"
            android:title="@string/menu_unsigned" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/edit"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about" />
    </group>
</menu>
