<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_course">

    <fragment
        android:id="@+id/nav_course"
        android:name="com.juice.timetable.ui.course.CourseFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_course">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.juice.timetable.ui.course.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_course" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_unsigned"
        android:name="com.juice.timetable.ui.unsigned.UnsignedFragment"
        android:label="@string/menu_unsigned"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.juice.timetable.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/initFragment"
        android:name="com.juice.timetable.ui.init.InitFragment"
        android:label="InitFragment" />
</navigation>