<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        tools:context="ui.init.InitFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9002433" />

        <EditText
            android:id="@+id/et_sno"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_sno"
            android:importantForAutofill="no"
            android:inputType="number|textPersonName"
            android:maxLength="9"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/guideline7" />

        <EditText
            android:id="@+id/et_edu_password"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_edu_password"
            android:inputType="textPassword"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="@+id/et_sno"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_sno"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/et_leave_password"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_leave_password"
            android:inputType="textPassword"
            android:maxLength="30"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="@+id/et_edu_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_edu_password"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_go"
            android:layout_width="164sp"
            android:layout_height="43sp"
            android:background="@drawable/shape"
            android:text="@string/btn_go"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="14sp"

            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="@+id/et_leave_password"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="@+id/et_leave_password"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_user_item"
            android:layout_width="77sp"
            android:layout_height="27sp"
            android:background="#00000000"

            android:hapticFeedbackEnabled="false"
            android:text="@string/btn_user_item"
            android:textColor="#1638D2"
            android:textColorHighlight="@color/design_default_color_background"
            android:textColorHint="@color/design_default_color_background"
            android:textColorLink="@color/design_default_color_background"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintVertical_bias="0.815" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="153dp"
            android:layout_height="104dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.086"
            app:srcCompat="@drawable/cz1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>